# CPfullstack

./: .gitignore  README.md  directory_paths.json  package-lock.json  package.json  svelte.config.js  vite.config.js
src-tauri/: Cargo.toml  Chatperfect.bat  setpython.bat  tauri.conf.json
src-tauri/messages/: current-chat-session.txt  llm-response.txt  message_meta.json  user_information.txt
src-tauri/src/: LoadConversationHistory.rs  backend_commands.rs  embedV3.py  load_conversation_history.rs  main copy Oct11.rs  main copy Sept19.rs  main.rs  main_async.py.BACKUP  queryV3.py  retrieve_text.py  task_list.py  user_ner_re.py  user_ner_re.py.BACKUP
src-tauri/src/old python backend copy/: database.py  main_async.py  requirements.txt  response_to_file.py  test_index_functions.py
src-tauri/src/testing main versions/: backend_commands.rs  main copy 2.rs  main copy.rs  main working unthreaded.rs  main-blah.rs  main.rs_OLDWORKING
src/backend/: 00_execution_map.md  00_module_inventory.md  __main__.py  bright_memory copy.py  bright_memory.py  chat_engine.spec  cli.py  database copy.py  database.py  embedV3 OpenAI Dev Day.py  embedV3 copy.py  embedV3.py  last_processed_prompt_hash.txt  main copy.py.BackfastResponseNoRepeatResponses  main copy.py.BackupwithFasterResponseWorking  main.py  main.py 4 autorestart on error.py  main.py copy.BackupwithSlowResponseWorking  main.py.BACKUP  main_async BACKUP.py  main_async.py  monitor_files.py  queryV3.py  requirements.txt  response_to_file.py  setup.ini  setup.py  user_ner_re.py
src/backend/IDEAS/: DOCs msgs-event-handler.md  Dueling Local Models.md  Lost-coding-evening.txt  jigglebutton.svelte
src/backend/messages/: llm-response.txt  user_prompt.txt
src/lib/: Greeting.svelte.test  context.ts  headerchange.js  locationSaveRestore.js  quill.snow.css  scrollStore copy 2.js  scrollStore.js  scrollStore.ts  settings copy.js  settings.js  store.js
src/routes/: +layout.svelte  +page.svelte  00storeIndex.js  EDITOR.svelte  Header copy 3.svelte  Header.svelte  SmoothStreamScroll.svelte  conversationcontainer copy 10.svelte  conversationcontainer copy 11.svelte  conversationcontainer copy 12.svelte  conversationcontainer copy 13.svelte  conversationcontainer copy 14.svelte  conversationcontainer copy 15.svelte  conversationcontainer copy 16.svelte  conversationcontainer copy 17.svelte  conversationcontainer copy 2.svelte  conversationcontainer copy 3.svelte  conversationcontainer copy 4.svelte  conversationcontainer copy 5.svelte  conversationcontainer copy 6.svelte  conversationcontainer copy 7.svelte  conversationcontainer copy 8.svelte  conversationcontainer copy 9.svelte  conversationcontainer copy Dec 1 2023.svelte  conversationcontainer copy Nov 22 2023.svelte  conversationcontainer copy.svelte  conversationcontainer.svelte  conversationcontainer.svelte.bakscroller  dbMonitor.svelte  layout.svelteBAK  llmresponse copy.svelte  llmresponse.svelte  page copy.svelte  page.svelte.BAK  scrollStore.js  scrollsearch copy 2.svelte  scrollsearch copy 3.svelte  scrollsearch copy 4.svelte  scrollsearch copy 5.svelte  scrollsearch copy 6.svelte  (+18 more)
src/routes/roles/: +page copy.svelte  +page.svelte  Argus Sphere.html  ArgusSphere.svelte  page copy.svelte
src/src/users/patrick_leamy/chat_history/: current-chat-session.txt
src/src/users/patrick_leamy/database/: full_text_store.db
src/src/users/patrick_leamy/index/: index.faiss  index.faiss_metadata_mapping.pkl
src/users/john_doe/: user_information.txt
src/users/patrick_leamy/: user_information.txt
src/users/patrick_leamy/chat_history/: current-chat-session.txt
src/users/patrick_leamy/database/: full_text_store.db  test.db
src/users/patrick_leamy/docs_drop/: test_text.txt
src/users/patrick_leamy/index/: index.faiss  index.faiss_metadata_mapping.pkl
