[package]
name = "app"
version = "0.1.0"
description = "ChatPerfect"
authors = ["Patrick G. Leamy"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.108"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.2", features = [ "fs-read-file", "fs-write-file", "fs-remove-file", "fs-read-dir", "fs-exists", "fs-create-dir", "fs-rename-file", "fs-copy-file", "fs-remove-dir"] }
syntect = "5.1.0"
keyring = "0.10.4" #check for the latest version
notify = "6.1.1" 
rusqlite = "0.29.0" #check for the latest version 
libsqlite3-sys = { version = "0.26.0", features = ["bundled"] }
lazy_static = "1.4.0"
configparser = "3.0.2"
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-printer = { version = "0.5.2" }
tauri-plugin-fs-watch = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[dependencies.tauri-plugin-sql]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v1"
features = ["sqlite"] # or "postgres", or "mysql"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[dependencies.pyo3]
version = "0.15"
features = ["extension-module"]
